--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node server.js",
     "lint": "eslint src",
-    "build": "eslint src && node server.js"
+    "build": "eslint src && node server.js",
+    "build-production": "webpack -p --define process.env.NODE_ENV='\"production\"' --progress --colors"
   },
   "repository": {
     "type": "git",
@@ -48,6 +49,8 @@
     "react-masked-field": "^1.0.0",
     "react-redux": "^5.0.3",
     "react-select": "^1.0.0-rc.3",
+    "react-toggle": "^3.0.1",
+    "react-toggle-switch": "^2.1.3",
     "redux": "^3.6.0",
     "whatwg-fetch": "^2.0.3"
   }
